Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/chainage_progress.html
+++ b/assets/templates/chainage_progress.html
@@ -13,10 +13,6 @@
     .overall_progress tbody tr td{
         text-align: center;
     }
-    .overall_progress tbody tr td:first-child{
-        text-align: left;
-        font-weight: 600;
-    }
 </style>
 <div class="header bg-dot30 excel-normal">
     <!--img src="/mpxd/assets/img/icons/line_chart-26.png" style="float: left;margin-right: 13px;"-->
@@ -32,20 +28,20 @@
 	<!--h2>Header h2</h2-->
     <!--Sebin-->
 	<table class="table table-bordered table-condensed table-hover overall_progress" style="">
-	<thead>
-    <tr>
-        <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Total Progress S-Curve</th>
-        <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Variance</th>
-        <th rowspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Trend</th>
-        <th rowspan="2" class="color-beige" colspan="2" style="text-align: center; vertical-align: middle;">Status</th>
-    </tr>
-    <tr>
-        <th style="text-align: center; color: #FFAF78;">Planned</th>
-        <th style="text-align: center; color: #FFAF78;">Actual</th>
-        <th style="text-align: center; color: #009e8c;">(%)</th>
-        <th style="text-align: center; color: #009e8c;">Weeks</th>
-    </tr>
-	</thead>
+        <thead>
+            <tr>
+                <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Total Progress S-Curve</th>
+                <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Variance</th>
+                <th rowspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Trend</th>
+                <th rowspan="2" class="color-beige" colspan="2" style="text-align: center; vertical-align: middle;">Status</th>
+            </tr>
+            <tr>
+                <th style="text-align: center; color: #FFAF78;">Planned</th>
+                <th style="text-align: center; color: #FFAF78;">Actual</th>
+                <th style="text-align: center; color: #009e8c;">(%)</th>
+                <th style="text-align: center; color: #009e8c;">Weeks</th>
+            </tr>
+        </thead>
         <tbody>
             <tr>
                 <td>100.0</td>
@@ -56,6 +52,316 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
         </tbody>
+    </table>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Track Survey</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Surface Preparation</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Long Rail Distibution</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Rail & Sleeper Assembly</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Rebar & Form Settingy</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Concreting</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Derailment Wall</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Welding/Destressing</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Rail Alignment</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">PR Bracket Installation</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">PR Installation/Alignment</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">PR Cover Installation</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Emergency Walkway</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Cable Through & Containment</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table table-bordered table-condensed table-hover overall_progress">
+                <thead>
+                <tr style="background: rgba(0, 140, 158, 0.2);">
+                    <th colspan="2" class="color-beige" style="text-align: center; vertical-align: middle;">Commissioning</th>
+                </tr>
+                <tr>
+                    <th style="text-align: center; color: #FFAF78;">Planned</th>
+                    <th style="text-align: center; color: #FFAF78;">Actual</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>9060</td>
+                    <td>9060</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
     <!--<div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#E83737"></i><span style="color: #efefef">&nbsp;Pending&nbsp;&nbsp;</span>-->
