Signed-off-by: janeelizabethjose <jane@hummingsoft.com.my>

--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -48,8 +48,9 @@
     </tr>
 	</thead>
         <tbody>
+        <%if(data.data[0].data['sbk-s-06']['progress'][0][0]=="North"){%>
             <tr>
-                <td><a href="kd8">KD8<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd8">KD8</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -58,7 +59,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd9">KD9<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd9">KD9</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -67,7 +68,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd9a">KD9a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd9a">KD9a</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -76,7 +77,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd10">KD10<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd10">KD10</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -85,7 +86,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd11">KD11<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd11">KD11</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -94,7 +95,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd11a">KD11a<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd11a">KD11a</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -103,7 +104,27 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd12n">KD12 North<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd12n">KD12</a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+        <%}else if(data.data[0].data['sbk-s-06']['progress'][0][0]=="Underground"){%>
+            <tr>
+                <td><a href="kd12u">KD12</a></td>
+                <td>100.0</td>
+                <td>100.0</td>
+                <td>0</td>
+                <td>0</td>
+                <td><i class="fa fa-chevron-down"></i></td>
+                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
+            </tr>
+        <%}else if(data.data[0].data['sbk-s-06']['progress'][0][0]=="South"){%>
+            <tr>
+                <td><a href="kd12s">KD12</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -112,7 +133,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd12u">KD12 UG<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd13">KD13</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -121,7 +142,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd12s">KD12 South<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd14">KD14</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -130,7 +151,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd13">KD13<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd15">KD15</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -139,7 +160,7 @@
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
             <tr>
-                <td><a href="kd14">KD14<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td><a href="kd16">KD16</a></td>
                 <td>100.0</td>
                 <td>100.0</td>
                 <td>0</td>
@@ -147,24 +168,7 @@
                 <td><i class="fa fa-chevron-down"></i></td>
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
-            <tr>
-                <td><a href="kd15">KD15<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
-                <td>100.0</td>
-                <td>100.0</td>
-                <td>0</td>
-                <td>0</td>
-                <td><i class="fa fa-chevron-down"></i></td>
-                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
-            </tr>
-            <tr>
-                <td><a href="kd16">KD16<i class="fa fa-link" style="font-size: 9px;"></i></a></td>
-                <td>100.0</td>
-                <td>100.0</td>
-                <td>0</td>
-                <td>0</td>
-                <td><i class="fa fa-chevron-down"></i></td>
-                <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
-            </tr>
+        <%}%>
         </tbody>
     <!--<div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>-->
