--- a/assets/templates/region_progress.html
+++ b/assets/templates/region_progress.html
@@ -15,17 +15,17 @@
 	</thead>
         <tbody>
             <tr>
-                <td style="text-align: center;"><a href="north"><span style="font-weight: 600;">North</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td style="text-align: center;"><a href="north"><span style="font-weight: 600;">North</span></a></td>
                 <td style="color: #ffd461; text-align: center;">99.00</td>
                 <td style="color: #FFAF78; text-align: center;">-0.40%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
             </tr>
             <tr>
-                <td style="text-align: center;"><a href="ug"><span style="font-weight: 600;">UG</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td style="text-align: center;"><a href="ug"><span style="font-weight: 600;">UG</span></a></td>
                 <td style="color: #ffd461; text-align: center;">46.30</td>
                 <td style="color: #FFAF78; text-align: center;">-15.10%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
             </tr>
             <tr>
-                <td style="text-align: center;"><a href="south"><span style="font-weight: 600;">South</span><i class="fa fa-link" style="font-size: 9px;"></i></a></td>
+                <td style="text-align: center;"><a href="south"><span style="font-weight: 600;">South</span></a></td>
                 <td style="color: #ffd461; text-align: center;">92.20</td>
                 <td style="color: #FFAF78; text-align: center;">-6.80%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
             </tr>
