--- a/assets/templates/chainage_progress.html
+++ b/assets/templates/chainage_progress.html
@@ -44,10 +44,10 @@
         </thead>
         <tbody>
             <tr>
-                <td>100.0</td>
-                <td>100.0</td>
-                <td>0</td>
-                <td>0</td>
+                <td><%=data.data[1].data['summary']['tp_plan']%></td>
+                <td><%=data.data[1].data['summary']['tp_actual']%></td>
+                <td><%=data.data[1].data['summary']['tp_variance_precent']%></td>
+                <td><%=data.data[1].data['summary']['tp_variance_weeks']%></td>
                 <td><i class="fa fa-chevron-down"></i></td>
                 <td><i class="fa fa-circle" style="color:#efe24b"></i></td>
             </tr>
@@ -68,8 +68,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['ts_plan']%></td>
+                    <td><%=data.data[1].data['summary']['ts_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -87,8 +87,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['sp_plan']%></td>
+                    <td><%=data.data[1].data['summary']['sp_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -109,8 +109,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['lrd_plan']%></td>
+                    <td><%=data.data[1].data['summary']['lrd_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -128,8 +128,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['rsa_plan']%></td>
+                    <td><%=data.data[1].data['summary']['rsa_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -150,8 +150,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['rfs_plan']%></td>
+                    <td><%=data.data[1].data['summary']['rfs_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -169,8 +169,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['con_plan']%></td>
+                    <td><%=data.data[1].data['summary']['con_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -191,8 +191,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['dw_plan']%></td>
+                    <td><%=data.data[1].data['summary']['dw_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -210,8 +210,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['wd_plan']%></td>
+                    <td><%=data.data[1].data['summary']['wd_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -232,8 +232,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['ra_plan']%></td>
+                    <td><%=data.data[1].data['summary']['ra_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -251,8 +251,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['prbi_plan']%></td>
+                    <td><%=data.data[1].data['summary']['prbi_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -273,8 +273,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['pria_plan']%></td>
+                    <td><%=data.data[1].data['summary']['pria_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -292,8 +292,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['prci_plan']%></td>
+                    <td><%=data.data[1].data['summary']['prci_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -314,8 +314,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['ew_plan']%></td>
+                    <td><%=data.data[1].data['summary']['ew_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -333,8 +333,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['ctc_plan']%></td>
+                    <td><%=data.data[1].data['summary']['ctc_actual']%></td>
                 </tr>
                 </tbody>
             </table>
@@ -355,8 +355,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td>9060</td>
-                    <td>9060</td>
+                    <td><%=data.data[1].data['summary']['comm_plan']%></td>
+                    <td><%=data.data[1].data['summary']['comm_plan']%></td>
                 </tr>
                 </tbody>
             </table>
