--- a/assets/templates/region_progress.html
+++ b/assets/templates/region_progress.html
@@ -1,34 +1,34 @@
 <div class="header bg-dot30 excel-normal">
     <!--img src="/mpxd/assets/img/icons/line_chart-26.png" style="float: left;margin-right: 13px;"-->
-	<% if (typeof(data.data[0].date) !== "undefined") { %>
-		<h2><%=data.title%></h2> <h2 class="asof">(As of <%=data.data[0].date%>)</h2>
-	<% } else {%>
-		<h2><%=data.title%></h2>
-	<% } %>
+    <% if (typeof(data.data[0].date) !== "undefined") { %>
+    <h2><%=data.title%></h2> <h2 class="asof">(As of <%=data.data[0].date%>)</h2>
+    <% } else {%>
+    <h2><%=data.title%></h2>
+    <% } %>
     <i class="header-icon fa fa-check-square-o"></i>
 </div>
 <div class="content" style="background: none;/*#1d2a34*/">
-	<!--h2>Header h2</h2-->
-	<table class="table table-bordered table-condensed table-hover" style="">
-	<thead>
-	<th style="color: #009e8c;text-align: center;">Region</th><th style="color: #FFAF78;text-align: center;">Actual</th><th style="color: #ffd461;text-align: center;">Variance</th>
-	</thead>
+    <!--h2>Header h2</h2-->
+    <table class="table table-bordered table-condensed table-hover" style="">
+        <thead>
+        <th style="color: #009e8c;text-align: center;">Region</th><th style="color: #FFAF78;text-align: center;">Actual</th><th style="color: #ffd461;text-align: center;">Variance</th>
+        </thead>
         <tbody>
-            <tr>
-                <td style="text-align: center;"><a href="north"><span style="font-weight: 600;">North</span></a></td>
-                <td style="color: #ffd461; text-align: center;">99.00</td>
-                <td style="color: #FFAF78; text-align: center;">-0.40%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
-            </tr>
-            <tr>
-                <td style="text-align: center;"><a href="ug"><span style="font-weight: 600;">UG</span></a></td>
-                <td style="color: #ffd461; text-align: center;">46.30</td>
-                <td style="color: #FFAF78; text-align: center;">-15.10%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
-            </tr>
-            <tr>
-                <td style="text-align: center;"><a href="south"><span style="font-weight: 600;">South</span></a></td>
-                <td style="color: #ffd461; text-align: center;">92.20</td>
-                <td style="color: #FFAF78; text-align: center;">-6.80%<i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i></td>
-            </tr>
+        <%_.each(data.data[1].data, function(i) {%>
+        <tr>
+            <td style="text-align: center;"><a href="<%=i['region_url']%>"><span style="font-weight: 600;"><%=i['region']%></span></a></td>
+            <td style="color: #ffd461; text-align: center;"><%=i['actual']%></td>
+            <td style="color: #FFAF78; text-align: center;"><%=i['week_difference']%>
+                <% if (i['week_difference']>0) { %>
+                <i class="fa fa-arrow-up" style="color: #ff4500; float: right;padding-right: 30px;"></i>
+                <% } else if(i['week_difference']<0) { %>
+                <i class="fa fa-arrow-down" style="color: #ff4500; float: right;padding-right: 30px;"></i>
+                <% } else if(i['week_difference']==0 || i['week_difference']==0.00) {%>
+                <i class="fa fa-arrow-right" style="color: #ff4500; float: right;padding-right: 30px;"></i>
+                <% } %>
+            </td>
+        </tr>
+        <%})%>
         </tbody>
-	</table>
+    </table>
 </div>
