Signed-off-by: sebint <sebin@hummingsoft.com.my>

--- a/assets/templates/station_tracklist.html
+++ b/assets/templates/station_tracklist.html
@@ -23,13 +23,13 @@
         height: 150px;
     }
     #usg_station {
-        /*margin-left: 20.7%;*/
+        margin-left: 20.7%;
     }
     #nsg_station_bar,
     #ssg_station_bar {
     }
     #usg_station_bar {
-        /*margin-left: 20.7%;*/
+        margin-left: 20.7%;
     }
     div#south_station_group {
         height: 180px;
@@ -173,7 +173,7 @@
             <!-- Underground Track Works -->
             <div id="underground_station_group" class="row">
                 <div id="usg_station" class="col-xs-12 col-sm-12 col-md-12 sg_a"></div>
-                <div id="usg_station_bar" class="col-xs-12 col-sm-12 col-md-12 sg_bar_a"></div>
+                <div id="usg_station_bar" class="col-xs-12 col-sm-12 col-md-12 sg_bar_a pull-left"></div>
             </div>
             <!-- -- -- -- -- -->
             <%}else if(data.data[1].data['region']=='south'){%>
