--- a/assets/templates/overall_progress.html
+++ b/assets/templates/overall_progress.html
@@ -54,6 +54,7 @@
     </tr>
 	</thead>
         <tbody>
+        <% if((Object.keys(data.data[2].data).length)>0){%>
         <%_.each(data.data[2].data, function(i) {%>
         <tr>
             <td><a href="<%=i['kd_url']%>"><%=i['kd']%></a></td>
@@ -69,7 +70,10 @@
             <td><i class="fa fa-circle" style="color:#ff0000"></i></td>
             <% } %>
         </tr>
-        <% })%>
+        <% })}else{%>
+        <tr>
+            <td colspan="7" style="text-align: center; height: 120px; vertical-align: middle">No data to display</td>
+        <%}%>
         </tbody>
     <!--<div style="text-align: right; margin-top: 15px;"> <i class="fa fa-circle" style="color:#2acd4a"></i><span style="color: #efefef">&nbsp;Completed&nbsp;&nbsp;</span>-->
         <!--<i class="fa fa-circle" style="color:#efe24b"></i><span style="color: #efefef">&nbsp;In Progress&nbsp;&nbsp;</span>-->
